fix: layout bugs edit progect

--- a/src/Components/EditProject/index.module.scss
+++ b/src/Components/EditProject/index.module.scss
@@ -1,61 +1,5 @@
-@import "../../styles/foundation.scss";
-
 .container {
     padding: 27px 53px 63px;
 
-    .header {
-        margin-bottom: 32px;
 
-        &__nameWrapper {
-            display: flex;
-            align-items: center;
-
-            margin-top: 16px;
-            margin-bottom: 8px;
-
-            &__options {
-                display: flex;
-
-                gap: 4px;
-
-                margin-left: 16px;
-
-                .toggleWrapper {
-                    display: flex;
-                    align-items: center;
-
-                    width: 36px;
-                }
-            }
-        }
-
-        & > :last-child {
-            margin-top: 20px;
-        }
-    }
-
-    .tagLists {
-        margin-bottom: 32px;
-
-        & > :not(:last-child) {
-            margin-bottom: 32px;
-        }
-    }
-
-    .content {
-        & > :last-child {
-            margin-top: 32px;
-        }
-
-        &__header {
-            color: $neutral900;
-        }
-
-        &__description {
-            margin-top: 20px;
-            & > :first-child {
-                margin-bottom: 8px;
-            }
-        }
-    }
 }
